test/fails/bad_tags/assign8.lgl
void main() {
    mat2x2 x = [[1., 1.], [1.]]; // Non-square matrix
}